# finviz-scraper

./: .env.example  .gitignore  README.md  finviz_screening.patch  finviz_weekly_screening.patch  pyproject.toml  streamlit_app.py
data/: watchlist.txt
scripts/: postprocess_peer_wfv.py.bak  postprocess_peer_wfv.py.bak_abs_pe_cap  postprocess_peer_wfv.py.bak_abs_pe_cap_v1  postprocess_peer_wfv.py.bak_autofix_grpcols_epscap  postprocess_peer_wfv.py.bak_define_epscap  postprocess_peer_wfv.py.bak_eps_guardrails  postprocess_peer_wfv.py.bak_eps_guardrails_v2  postprocess_peer_wfv.py.bak_epscap_conditional  postprocess_peer_wfv.py.bak_epscap_inf  postprocess_peer_wfv.py.bak_eq_penalty_v1  postprocess_peer_wfv.py.bak_fix_dfget_fillna  postprocess_peer_wfv.py.bak_fix_fcf_get  postprocess_peer_wfv.py.bak_fix_grpcols_block  postprocess_peer_wfv.py.bak_fix_indent_epscap  postprocess_peer_wfv.py.bak_force_floor8  postprocess_peer_wfv.py.bak_force_wfv_peer_assign  postprocess_peer_wfv.py.bak_gate_floor_on_outlier  postprocess_peer_wfv.py.bak_grpbylist_20251224_233605  postprocess_peer_wfv.py.bak_grpkey_20251224_235401  postprocess_peer_wfv.py.bak_no_eps_wfv_for_lossmakers  postprocess_peer_wfv.py.bak_norm_20251224_233149  postprocess_peer_wfv.py.bak_ok_eps_20251224_233748  postprocess_peer_wfv.py.bak_pe_guard  postprocess_peer_wfv.py.bak_pefix_20251224_234309  postprocess_peer_wfv.py.bak_raise_pe_floor  postprocess_peer_wfv.py.bak_remove_group_epscap  postprocess_peer_wfv.py.bak_use_eps_for_wfv  postprocess_valuation.py  preflight.py  pull_full_universe.py
tests/: test_parse.py  (+6 more)
(+65 files in other folders)
