[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finviz-weekly"
version = "0.1.0"
description = "Weekly Finviz screener scraper"
authors = [{name = "Auto Gen", email = "auto@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "finvizfinance>=1.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
